--- a/index.html
+++ b/index.html
@@ -173,10 +173,15 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-6">
-
+          <div class="col-lg-3">
             <div class="row gy-4">
-              <div class="col-md-6">
+              <div class="info-box">
+                <i class="bi bi-envelope"></i>
+                <h3>Email Us</h3>
+                <p>cesuomlk@gmail.com</p>
+              </div>
+            </div>
+            <div class="row gy-4">
                 <div class="info-box">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
@@ -188,28 +193,6 @@
                     Moratuwa 10400
                     </p>
                 </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box">
-                  <i class="bi bi-telephone"></i>
-                  <h3>Call Us</h3>
-                  <p>+94 71 234 5678<br>+1 6678 254445 41</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box">
-                  <i class="bi bi-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p>cesuomlk@gmail.com</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box">
-                  <i class="bi bi-clock"></i>
-                  <h3>Open Hours</h3>
-                  <p>Monday - Friday<br>9:00AM - 05:00PM</p>
-                </div>
-              </div>
             </div>
 
           </div>
