minor changes in the index

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <div class="text-center">
-            <!-- <a class="getstarted scrollto" href="application.html">Apply Now</a> -->
+            <a class="getstarted scrollto" href="application.html">Apply Now</a>
 
           </div>
         </ul>
@@ -110,21 +110,6 @@
 
   </section><!-- End Hero -->
   <main id="main">
-    <section id="intro" class="intro">
-      <div class="container card shadow">
-        <div class="header">
-          <h1 class="text-center"><strong>CES | Scholar</strong></h1>
-          <p class="text-center px-3">This platform is dedicated to all the Civil Engineering Students of University of
-            Moratuwa who would like
-            to have monetary support to ease their stay at the university!</p>
-          <div class="button text-center">
-            <button class="btn px-4"><a href="#about" style="color: #fff;"> Read More</a></button>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
 
